--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@angular/http": "^7.2.2",
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "^7.2.2",
+    "@angular/service-worker": "^7.2.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "angular-cli-ghpages": "^0.6.0",
     "core-js": "^2.5.4",
     "flag-icon-css": "^3.3.0",
     "rxjs": "~6.5.1",
